agregue todos los alt y h1

--- a/contacto.html
+++ b/contacto.html
@@ -106,7 +106,7 @@
           </div>
           <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="fs-2">Medios de pago</p>
-            <img class="tarjetas" src="./css/img/iconos_tarjetas_credito7.jpg" alt="">
+            <img class="tarjetas" src="./css/img/iconos_tarjetas_credito7.jpg" alt="tarjetasDeCredito">
           </div>
           <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="fs-2">Contactanos</p>
@@ -118,7 +118,7 @@
           </div>
           <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="fs-2">Formas de envio</p>
-            <img src="./css/img/oca-favicon.png" alt="">
+            <img src="./css/img/oca-favicon.png" alt="envioOca">
           </div>
         </div>
       </div>
