--- a/darkoEdition.html
+++ b/darkoEdition.html
@@ -45,6 +45,7 @@
       
     <main class="bg-black">
         <div class="row">
+            <h1 class="text-light text-center">DARKO EDITION</h1>
             <p class="text-light p-5">Aragon Sebastian, es un diseñador de moda Argentino fundador de la marca "Darko" dónde trabaja con Agustina Sabbat y Juan Shippoto. Nacido en Neuquen capital, el 1 de abril de 1997. A los 10 años sus padres se mudaron a la ciudad de Rosario, donde comenzó su carrera como músico a temprana edad. A los 20 años junto a su hermano CoolAragon y su colega Juanse formaron el grupo musical "Made Darko", al cual luego de unos años se unieron Haarper y Grim salvo.</p>
             <div class="col-lg-4">
                 <img class="darkoEd" src="css/img/cro.jpg" alt="remeras">
@@ -81,7 +82,7 @@
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <p class="fs-2">Medios de pago</p>
-                    <img class="tarjetas" src="./css/img/iconos_tarjetas_credito7.jpg" alt="">
+                    <img class="tarjetas" src="./css/img/iconos_tarjetas_credito7.jpg" alt="tarjetasDeCredito">
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <p class="fs-2">Contactanos</p>
@@ -93,7 +94,7 @@
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <p class="fs-2">Formas de envio</p>
-                    <img src="./css/img/oca-favicon.png" alt="">
+                    <img src="./css/img/oca-favicon.png" alt="OCA">
                 </div>
             </div>
         </div>
