--- a/sucursales.html
+++ b/sucursales.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="container-fluid bg-dark d-flex justify-content-center">
-        <p class="text-light mb-0 p-2 fs-6">Envio gratis en compras superiores a $19999!</p>
+        <h1 class="text-light mb-0 p-2 fs-6">Envio gratis en compras superiores a $19999!</h1>
     </header>
 
     <nav class="navbar navbar-expand-lg bg-light">
@@ -94,7 +94,7 @@
           </div>
           <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="fs-2">Medios de pago</p>
-            <img class="tarjetas" src="./css/img/iconos_tarjetas_credito7.jpg" alt="">
+            <img class="tarjetas" src="./css/img/iconos_tarjetas_credito7.jpg" alt="tarjetasDeCredito">
           </div>
           <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="fs-2">Contactanos</p>
@@ -106,7 +106,7 @@
           </div>
           <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="fs-2">Formas de envio</p>
-            <img src="./css/img/oca-favicon.png" alt="">
+            <img src="./css/img/oca-favicon.png" alt="envioOca">
           </div>
         </div>
       </div>
